k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-manager-frontend
  namespace: finance-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finance-manager-frontend
  template:
    metadata:
      labels:
        app: finance-manager-frontend
    spec:
      containers:
        - name: frontend
          image: valdir713/finance-manager-frontend:main
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
